fix navbar top white space with add bot padding

--- a/michaelgharzai/static/css/mytheme.css
+++ b/michaelgharzai/static/css/mytheme.css
@@ -1,6 +1,6 @@
 
-body { 
-	padding-top: 50px; 
+.navbar{
+	padding-bottom: 40px;
 }
 .imageClip
 {
